change results based on proceedeer
